Feature service API endpoints

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,12 +15,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="logs"
-            >Logs</a
-          >
+          <a class="nav-link" routerLink="logs">Logs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="subscribers">Subscribers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="pricing-plan">Pricing Plans</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="parking-spots">Parking Spots</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="subscriptions">Subscriptions</a>
         </li>
       </ul>
       <!-- <form class="d-flex" role="search">
