--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,6 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f5f5f5;
+  background-color: #222222;
+  color: #f3efe0;
 }
