--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,6 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #222222;
-  color: #f3efe0;
+  background-color: #3aa6b9;
+  color: #454545;
 }
