--- a/src/app/pages/pricing-plan/pricing-plan.component.html
+++ b/src/app/pages/pricing-plan/pricing-plan.component.html
@@ -15,7 +15,7 @@
         Daily Pricing: {{ plan.dailyPricing }}
       </li>
       <li class="list-group-item font-weight-normal py-3">
-        Min Hours: {{ plan.minHours }}
+        Min Hours: {{ plan.minimumHours }}
       </li>
     </ul>
   </div>
