--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-danger">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="">{{ title }}</a>
     <button
@@ -30,15 +30,15 @@
           <a class="nav-link" routerLink="subscriptions">Subscriptions</a>
         </li>
       </ul>
-      <!-- <form class="d-flex" role="search">
+      <form class="d-flex" role="search">
         <input
           class="form-control me-2"
           type="search"
           placeholder="Search"
           aria-label="Search"
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
