--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,5 @@
 <div class="container-fluid d-flex align-items-center justify-content-center">
-  <div class="p-5 text-center bg-body-tertiary rounded-3">
-    <h1 class="text-body-emphasis">Basic jumbotron</h1>
-    <p class="lead">
-      This is a simple Bootstrap jumbotron that sits within a
-      <code>.container</code>, recreated with built-in utility classes.
-    </p>
+  <div class="my-5">
+    <h1>Welcome To My App</h1>
   </div>
 </div>
