--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -1,1 +1,28 @@
-<p>subscribers works!</p>
+<div class="container my-5">
+  <table class="table" *ngIf="allSubscribers; else noSubscribers">
+    <thead>
+      <tr>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Plate Number</th>
+        <th scope="col">View Details</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let subscriber of allSubscribers">
+        <td>{{ subscriber.firstName }}</td>
+        <td>{{ subscriber.lastName }}</td>
+        <td>{{ subscriber.plateNumber }}</td>
+        <td>
+          <button class="btn btn-light" [routerLink]="[subscriber.id]">
+            View Details
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <button type="submit" class="btn btn-success">Add Subscriber</button>
+</div>
+
+<ng-template #noSubscribers>No Subscribers atm</ng-template>
