--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -134,14 +134,14 @@
                 >DiscountValue</label
               >
               <input
-                type="date"
+                type="text"
                 class="form-control"
                 formControlName="DiscountValue"
               />
             </div>
             <div class="mb-3">
               <label for="Price" class="form-label">Price</label>
-              <input type="date" class="form-control" formControlName="Price" />
+              <input type="text" class="form-control" formControlName="Price" />
             </div>
           </div>
 
