Headers Post SUb

--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -78,7 +78,7 @@
           <div class="mb-3">
             <label for="PhoneNumber" class="form-label">PhoneNumber</label>
             <input
-              type="number"
+              type="text"
               class="form-control"
               formControlName="PhoneNumber"
             />
