--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -139,10 +139,10 @@
                 formControlName="DiscountValue"
               />
             </div>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
               <label for="Price" class="form-label">Price</label>
               <input type="text" class="form-control" formControlName="Price" />
-            </div>
+            </div> -->
           </div>
 
           <div class="modal-footer">
