--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -14,6 +14,7 @@
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">Plate Number</th>
+        <th scope="col">Id</th>
         <th scope="col">View Details</th>
       </tr>
     </thead>
@@ -22,6 +23,7 @@
         <td>{{ subscriber.firstName }}</td>
         <td>{{ subscriber.lastName }}</td>
         <td>{{ subscriber.plateNumber }}</td>
+        <td>{{ subscriber.id }}</td>
         <td>
           <button class="btn btn-light" [routerLink]="[subscriber.id]">
             View Details
@@ -134,7 +136,7 @@
                 >DiscountValue</label
               >
               <input
-                type="text"
+                type="number"
                 class="form-control"
                 formControlName="DiscountValue"
               />
