--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,9 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="logs">Logs</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLink="parking-spots">Parking Spots</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLink="pricing-plan">Pricing Plans</a>
         </li>
