--- a/src/app/pages/parking-spot/parking-spot.component.html
+++ b/src/app/pages/parking-spot/parking-spot.component.html
@@ -1,16 +1,24 @@
-<div class="container my-5">
-  <table class="table" *ngIf="allSpots; else noSpots">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let spot of allSpots">
-        <td>{{ spot.id }}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container pb-3">
+  <div class="py-3 d-flex flex-wrap gap-3 justify-content-evenly">
+    <div class="text-success">
+      <h4>{{ "free Regular Spots" | uppercase }}</h4>
+    </div>
+    <div class="text-info">
+      <h4>{{ "free Reserved Spots" | uppercase }}</h4>
+    </div>
+    <div class="text-danger">
+      <h4>{{ "occupied Regular Spots" | uppercase }}</h4>
+    </div>
+    <div class="text-warning">
+      <h4>{{ "occupied Reserved Spots" | uppercase }}</h4>
+    </div>
+  </div>
+  <div class="py-3 d-flex flex-row flex-wrap gap-4" *ngIf="allSpots">
+    <div
+      *ngFor="let spot of getRange(allSpots.totalSpots)"
+      class="rounded"
+      style="width: 80px; height: 80px"
+      [ngClass]="getSpotStatusClass(spot)"
+    ></div>
+  </div>
 </div>
-
-<ng-template #noSpots>No Logs atm</ng-template>
