--- a/src/app/pages/pricing-plan/pricing-plan.component.html
+++ b/src/app/pages/pricing-plan/pricing-plan.component.html
@@ -18,9 +18,11 @@
         Min Hours: {{ plan.minimumHours }}
       </li>
       <button
+        type="button"
         class="btn btn-primary"
         data-bs-toggle="modal"
-        data-bs-target="#staticBackdrop"
+        [attr.data-bs-target]="'#exampleModal' + plan.type"
+        (click)="fillModal(plan)"
       >
         Update
       </button>
@@ -29,17 +31,15 @@
     <!-- Modal -->
     <div
       class="modal fade"
-      id="staticBackdrop"
-      data-bs-backdrop="static"
-      data-bs-keyboard="false"
+      [id]="'exampleModal' + plan.type"
       tabindex="-1"
-      aria-labelledby="staticBackdropLabel"
+      aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="staticBackdropLabel">
+            <h5 class="modal-title" id="exampleModalLabel">
               Update {{ plan.type }}
             </h5>
             <button
@@ -90,7 +90,13 @@
                 >
                   Close
                 </button>
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  data-bs-dismiss="modal"
+                >
+                  Update
+                </button>
               </div>
             </form>
           </div>
