--- a/src/app/pages/subscribers/subscribers.component.html
+++ b/src/app/pages/subscribers/subscribers.component.html
@@ -1,10 +1,5 @@
 <div class="container my-3">
-  <button
-    type="button"
-    class="btn btn-info mb-3"
-    data-bs-toggle="modal"
-    data-bs-target="#staticBackdrop"
-  >
+  <button type="button" class="btn btn-info mb-3" routerLink="new">
     Add Subscriber
   </button>
 
@@ -38,137 +33,4 @@
   </div>
 </div>
 
-<ng-template #noSubscribers>No Subscribers atm</ng-template>
-
-<!-- Modal -->
-<div
-  class="modal fade"
-  id="staticBackdrop"
-  data-bs-backdrop="static"
-  data-bs-keyboard="false"
-  tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">
-          Add Subscriber
-        </h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="createSubForm" (ngSubmit)="submitNewSub()">
-          <div class="mb-3">
-            <label for="FirstName" class="form-label">First Name</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="FirstName"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="LastName" class="form-label">Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="LastName"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="PhoneNumber" class="form-label">PhoneNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="PhoneNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="Email" class="form-label">Email</label>
-            <input type="email" class="form-control" formControlName="Email" />
-          </div>
-          <div class="mb-3">
-            <label for="IdCardNumber" class="form-label">IdCardNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="IdCardNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="PlateNumber" class="form-label">PlateNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="PlateNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="Birthday" class="form-label">Birthday</label>
-            <input
-              type="date"
-              class="form-control"
-              formControlName="Birthday"
-            />
-          </div>
-
-          <div formGroupName="subscriptionForCreationDTO">
-            <div class="mb-3">
-              <label for="StartDate" class="form-label">StartDate</label>
-              <input
-                type="date"
-                class="form-control"
-                formControlName="StartDate"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="EndDate" class="form-label">EndDate</label>
-              <input
-                type="date"
-                class="form-control"
-                formControlName="EndDate"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="DiscountValue" class="form-label"
-                >DiscountValue</label
-              >
-              <input
-                type="number"
-                class="form-control"
-                formControlName="DiscountValue"
-              />
-            </div>
-            <!-- <div class="mb-3">
-              <label for="Price" class="form-label">Price</label>
-              <input type="text" class="form-control" formControlName="Price" />
-            </div> -->
-          </div>
-
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button
-              type="submit"
-              [disabled]="createSubForm.status === 'INVALID'"
-              class="btn btn-success"
-            >
-              Save
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+<ng-template #noSubscribers>No Subscribers</ng-template>
