--- a/src/app/pages/parking-spot/parking-spot.component.html
+++ b/src/app/pages/parking-spot/parking-spot.component.html
@@ -1,16 +1,37 @@
 <div class="container pb-3">
   <div class="py-3 d-flex flex-wrap gap-3 justify-content-evenly">
-    <div class="text-success">
-      <h4>{{ "free Regular Spots" | uppercase }}</h4>
+    <div class="text">
+      <h4>{{ "Total spots:" + allSpots.totalSpots | uppercase }}</h4>
     </div>
-    <div class="text-info">
-      <h4>{{ "free Reserved Spots" | uppercase }}</h4>
+    <div class="text-success">
+      <h4>
+        {{ "free Regular Spots :" + allSpots.freeRegularSpots | uppercase }}
+      </h4>
     </div>
     <div class="text-danger">
-      <h4>{{ "occupied Regular Spots" | uppercase }}</h4>
+      <h4>
+        {{
+          "occupied Regular Spots: " + allSpots.occupiedRegularSpots | uppercase
+        }}
+      </h4>
+    </div>
+    <div class="text">
+      <h4>
+        {{ "total reserved Spots: " + allSpots.reservedSpots | uppercase }}
+      </h4>
+    </div>
+    <div class="text-info">
+      <h4>
+        {{ "free Reserved Spots: " + allSpots.freeReservedSpots | uppercase }}
+      </h4>
     </div>
     <div class="text-warning">
-      <h4>{{ "occupied Reserved Spots" | uppercase }}</h4>
+      <h4>
+        {{
+          "occupied Reserved Spots: " + allSpots.occupiedReservedSpots
+            | uppercase
+        }}
+      </h4>
     </div>
   </div>
   <div class="py-3 d-flex flex-row flex-wrap gap-4" *ngIf="allSpots">
