--- a/src/app/pages/subscribers/single-subscriber/single-subscriber.component.html
+++ b/src/app/pages/subscribers/single-subscriber/single-subscriber.component.html
@@ -1,36 +1,39 @@
 <ng-container *ngIf="subscriber">
-  <div class="container my-5 bg-3 text-center">
+  <div class="container my-3 bg-3 text-center">
+    <div class="d-flex flex-start">
+      <button class="btn btn-secondary" routerLink="../">Go Back</button>
+    </div>
     <h1 class="margin">
       {{ subscriber.firstName + " " + subscriber.lastName }}
     </h1>
 
     <div class="row my-5 align-items-center">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>idCardNumber</h3>
+        <h3>Id Card Number</h3>
         <p>
           {{ subscriber.idCardNumber }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>email</h3>
+        <h3>Email</h3>
         <p>
           {{ subscriber.email }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>phoneNumber</h3>
+        <h3>Phone Number</h3>
         <p>
           {{ subscriber.phoneNumber }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>birthday</h3>
+        <h3>Birthday</h3>
         <p>
           {{ subscriber.birthday }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>plateNumber</h3>
+        <h3>Plate Number</h3>
         <p>
           {{ subscriber.plateNumber }}
         </p>
