--- a/src/app/pages/subscription/single-sub/single-sub.component.html
+++ b/src/app/pages/subscription/single-sub/single-sub.component.html
@@ -1,38 +1,41 @@
 <ng-container *ngIf="subscription">
-  <div class="container my-5 bg-3 text-center">
+  <div class="container my-3 bg-3 text-center">
+    <div class="d-flex flex-start">
+      <button class="btn btn-secondary" routerLink="../">Go Back</button>
+    </div>
     <h1 class="margin">
       {{ subscription.code }}
     </h1>
 
     <div class="row my-5 align-items-center">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>subscriberId</h3>
+        <h3>Subscriber Id</h3>
         <p>
           {{ subscription.subscriberId }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>price</h3>
+        <h3>Price</h3>
         <p>
-          {{ subscription.price }}
+          {{ subscription.price | currency : "EUR" }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>startDate</h3>
+        <h3>Start Date</h3>
         <p>
           {{ subscription.startDate | date : "medium" }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>endDate</h3>
+        <h3>End Date</h3>
         <p>
           {{ subscription.endDate | date : "medium" }}
         </p>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <h3>discountValue</h3>
+        <h3>Discount Value</h3>
         <p>
-          {{ subscription.discountValue }}
+          {{ subscription.discountValue / 100 | percent }}
         </p>
       </div>
     </div>
