--- a/src/app/pages/subscription/subscription.component.html
+++ b/src/app/pages/subscription/subscription.component.html
@@ -13,7 +13,7 @@
       <thead>
         <tr>
           <th scope="col">Code</th>
-          <th scope="col">subscriber_id</th>
+          <th scope="col">Subscriber Id</th>
           <th scope="col">View Details</th>
           <th scope="col">Delete</th>
         </tr>
@@ -41,7 +41,7 @@
 <ng-template #noSubscriptions>No Subscriptions atm</ng-template>
 
 <!-- Modal -->
-<!-- <div
+<div
   class="modal fade"
   id="staticBackdrop"
   data-bs-backdrop="static"
@@ -53,9 +53,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">
-          Add Subscriber
-        </h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
         <button
           type="button"
           class="btn-close"
@@ -64,89 +62,37 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="createSubForm" (ngSubmit)="submitNewSub()">
+        <form [formGroup]="addSub" (ngSubmit)="createSubscription()">
           <div class="mb-3">
-            <label for="FirstName" class="form-label">First Name</label>
+            <label for="exampleInputEmail1" class="form-label"
+              >Discount Value</label
+            >
             <input
-              type="text"
+              type="number"
               class="form-control"
-              formControlName="FirstName"
+              formControlName="discountValue"
             />
           </div>
           <div class="mb-3">
-            <label for="LastName" class="form-label">Last Name</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="LastName"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="PhoneNumber" class="form-label">PhoneNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="PhoneNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="Email" class="form-label">Email</label>
-            <input type="email" class="form-control" formControlName="Email" />
-          </div>
-          <div class="mb-3">
-            <label for="IdCardNumber" class="form-label">IdCardNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="IdCardNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="PlateNumber" class="form-label">PlateNumber</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="PlateNumber"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="Birthday" class="form-label">Birthday</label>
+            <label for="startDate" class="form-label">Start Date</label>
             <input
               type="date"
               class="form-control"
-              formControlName="Birthday"
+              formControlName="startDate"
             />
           </div>
-
-          <div formGroupName="subscriptionForCreationDTO">
-            <div class="mb-3">
-              <label for="StartDate" class="form-label">StartDate</label>
-              <input
-                type="date"
-                class="form-control"
-                formControlName="StartDate"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="EndDate" class="form-label">EndDate</label>
-              <input
-                type="date"
-                class="form-control"
-                formControlName="EndDate"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="DiscountValue" class="form-label"
-                >DiscountValue</label
-              >
-              <input
-                type="number"
-                class="form-control"
-                formControlName="DiscountValue"
-              />
-            </div>
+          <div class="mb-3">
+            <label for="endDate" class="form-label">End Date</label>
+            <input type="date" class="form-control" formControlName="endDate" />
           </div>
-
+          <div class="mb-3">
+            <label for="subscriberId" class="form-label">Subscriber Id</label>
+            <input
+              type="number"
+              class="form-control"
+              formControlName="subscriberId"
+            />
+          </div>
           <div class="modal-footer">
             <button
               type="button"
@@ -156,15 +102,15 @@
               Close
             </button>
             <button
-              type="submit"
-              [disabled]="createSubForm.status === 'INVALID'"
-              class="btn btn-success"
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
             >
-              Save
+              Create
             </button>
           </div>
         </form>
       </div>
     </div>
   </div>
-</div> -->
+</div>
