--- a/src/app/pages/parking-spot/parking-spot.component.html
+++ b/src/app/pages/parking-spot/parking-spot.component.html
@@ -1,45 +1,48 @@
-<div class="container pb-3">
-  <div class="py-3 d-flex flex-wrap gap-3 justify-content-evenly">
-    <div class="text">
-      <h4>{{ "Total spots:" + allSpots.totalSpots | uppercase }}</h4>
+<ng-container *ngIf="allSpots">
+  <div class="container pb-3">
+    <div class="py-3 d-flex flex-wrap gap-3 justify-content-evenly">
+      <div class="text">
+        <h4>{{ "Total spots:" + allSpots.totalSpots | uppercase }}</h4>
+      </div>
+      <div class="text">
+        <h4>
+          {{ "total reserved Spots: " + allSpots.reservedSpots | uppercase }}
+        </h4>
+      </div>
+      <div class="text-success">
+        <h4>
+          {{ "free Regular Spots :" + allSpots.freeRegularSpots | uppercase }}
+        </h4>
+      </div>
+      <div class="text-danger">
+        <h4>
+          {{
+            "occupied Regular Spots: " + allSpots.occupiedRegularSpots
+              | uppercase
+          }}
+        </h4>
+      </div>
+      <div class="text-info">
+        <h4>
+          {{ "free Reserved Spots: " + allSpots.freeReservedSpots | uppercase }}
+        </h4>
+      </div>
+      <div class="text-warning">
+        <h4>
+          {{
+            "occupied Reserved Spots: " + allSpots.occupiedReservedSpots
+              | uppercase
+          }}
+        </h4>
+      </div>
     </div>
-    <div class="text-success">
-      <h4>
-        {{ "free Regular Spots :" + allSpots.freeRegularSpots | uppercase }}
-      </h4>
-    </div>
-    <div class="text-danger">
-      <h4>
-        {{
-          "occupied Regular Spots: " + allSpots.occupiedRegularSpots | uppercase
-        }}
-      </h4>
-    </div>
-    <div class="text">
-      <h4>
-        {{ "total reserved Spots: " + allSpots.reservedSpots | uppercase }}
-      </h4>
-    </div>
-    <div class="text-info">
-      <h4>
-        {{ "free Reserved Spots: " + allSpots.freeReservedSpots | uppercase }}
-      </h4>
-    </div>
-    <div class="text-warning">
-      <h4>
-        {{
-          "occupied Reserved Spots: " + allSpots.occupiedReservedSpots
-            | uppercase
-        }}
-      </h4>
+    <div class="py-3 d-flex flex-row flex-wrap gap-4" *ngIf="allSpots">
+      <div
+        *ngFor="let spot of getRange(allSpots.totalSpots)"
+        class="rounded"
+        style="width: 80px; height: 80px"
+        [ngClass]="getSpotStatusClass(spot)"
+      ></div>
     </div>
   </div>
-  <div class="py-3 d-flex flex-row flex-wrap gap-4" *ngIf="allSpots">
-    <div
-      *ngFor="let spot of getRange(allSpots.totalSpots)"
-      class="rounded"
-      style="width: 80px; height: 80px"
-      [ngClass]="getSpotStatusClass(spot)"
-    ></div>
-  </div>
-</div>
+</ng-container>
