--- a/src/app/pages/subscription/subscription.component.html
+++ b/src/app/pages/subscription/subscription.component.html
@@ -102,7 +102,7 @@
               Close
             </button>
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary"
               data-bs-dismiss="modal"
             >
