--- a/src/app/pages/subscribers/new/new.component.html
+++ b/src/app/pages/subscribers/new/new.component.html
@@ -16,7 +16,7 @@
         <input type="text" class="form-control" formControlName="LastName" />
       </div>
       <div class="mb-3">
-        <label for="PhoneNumber" class="form-label">PhoneNumber</label>
+        <label for="PhoneNumber" class="form-label">Phone Number</label>
         <input type="text" class="form-control" formControlName="PhoneNumber" />
       </div>
       <div class="mb-3">
@@ -24,7 +24,7 @@
         <input type="email" class="form-control" formControlName="Email" />
       </div>
       <div class="mb-3">
-        <label for="IdCardNumber" class="form-label">IdCardNumber</label>
+        <label for="IdCardNumber" class="form-label">Id Card Number</label>
         <input
           type="text"
           class="form-control"
@@ -32,7 +32,7 @@
         />
       </div>
       <div class="mb-3">
-        <label for="PlateNumber" class="form-label">PlateNumber</label>
+        <label for="PlateNumber" class="form-label">Plate Number</label>
         <input type="text" class="form-control" formControlName="PlateNumber" />
       </div>
       <div class="mb-3">
@@ -45,15 +45,15 @@
       <div>
         <h3 class="my-5">Subscription Details</h3>
         <div class="mb-3">
-          <label for="StartDate" class="form-label">StartDate</label>
+          <label for="StartDate" class="form-label">Start Date</label>
           <input type="date" class="form-control" formControlName="StartDate" />
         </div>
         <div class="mb-3">
-          <label for="EndDate" class="form-label">EndDate</label>
+          <label for="EndDate" class="form-label">End Date</label>
           <input type="date" class="form-control" formControlName="EndDate" />
         </div>
         <div class="mb-3">
-          <label for="DiscountValue" class="form-label">DiscountValue</label>
+          <label for="DiscountValue" class="form-label">Discount Value %</label>
           <input
             type="number"
             class="form-control"
